[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/FlamingSkull/Projectile_Fireball.png" type="Texture" id=1]
[ext_resource path="res://Common/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Common/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/FlamingSkull/Fireball.gd" type="Script" id=4]
[ext_resource path="res://Common/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Common/Stats.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 720, 720 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 1440, 0, 720, 720 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 720, 720, 720 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 720, 720, 720, 720 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 80.5151

[sub_resource type="Animation" id=7]
resource_name = "FormingProjectile"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0057373, 180.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CPUParticles2D:initial_velocity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "PrepareLaunch"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.6, 1, 1.1, 1.5, 1.6, 1.8, 1.9, 2.1, 2.2, 2.4, 2.5, 2.7, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0057373, 90.0, 180.0, 270.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1, 1.3, 1.5, 1.8, 2, 2.3, 2.5, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 47199.2

[sub_resource type="CircleShape2D" id=10]
radius = 80.7642

[sub_resource type="CircleShape2D" id=11]
radius = 81.9349

[node name="Fireball" type="KinematicBody2D"]
rotation = 0.000100135
script = ExtResource( 4 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 100
speed_scale = 0.75
spread = 180.0
gravity = Vector2( 0, 0 )
orbit_velocity = -1.0
scale_amount = 2.0
color = Color( 1, 0.329412, 0.156863, 1 )
hue_variation = 0.05
hue_variation_random = 1.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 5 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FormingProjectile = SubResource( 7 )
anims/PrepareLaunch = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0

[node name="Stats" parent="." instance=ExtResource( 6 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 9 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4
damage = 3

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 11 )

[connection signal="tree_exited" from="." to="." method="_on_Fireball_tree_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
